flex/flex-tests/testData/js2_highlighting/CheckReadWrite.js2
interface IFoo {
  function get foo():int;
}

var v:IFoo;
const aConst = 2;
++<error descr="Attempt to assign to const or readonly variable">aConst</error>;
v.<error descr="Attempt to assign to const or readonly variable">foo</error>++;
